--- a/Html/adminIncomeAnalysis.html
+++ b/Html/adminIncomeAnalysis.html
@@ -97,11 +97,16 @@
         </div>
         <div id="serverType">
             <canvas id="myPieChartServerType"></canvas>
+            <div class="pie-chart-room"></div>
         </div>
         <div id="method">
             <canvas id="myPieChartMethod"></canvas>
+            <div class="pie-chart-room"></div>
         </div>
     </div>
+    <script>
+
+    </script>
     <script src="adminIncomeAnalysis.js"></script>
 </body>
 
