--- a/Html/mainPieChart.html
+++ b/Html/mainPieChart.html
@@ -2,7 +2,7 @@
  * @Author: Innis
  * @Description: 
  * @Date: 2022-04-20 17:14:17
- * @LastEditTime: 2022-04-20 17:22:10
+ * @LastEditTime: 2022-06-03 17:34:40
  * @FilePath: \Html\mainPieChart.html
 -->
 <!DOCTYPE html>
@@ -77,7 +77,14 @@
                             labels: {
                                 color: axisColor
                             }
-                        }
+                        },
+                        tooltip: {
+                            callbacks: {
+                                label: function (tooltipItem) {
+                                    return "Order quantity of " + tooltipItem.label + ": " + tooltipItem.formattedValue
+                                }
+                            }
+                        },
                     }
                 }
             });
