--- a/Html/mainLineChart.html
+++ b/Html/mainLineChart.html
@@ -105,7 +105,8 @@
                                 color: "rgba(242, 243, 245,1)"
                             },
                             ticks: {
-                                color: axisColor
+                                color: axisColor,
+                                precision: 0
                             }
                         }
                     },
